# qt-example

./: CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/: mac-toolchain.cmake  zig-toolchain.cmake
src/hello/: CMakeLists.txt  hello.cpp  main.cpp
src/qtdemo/: CMakeLists.txt
